<resources>
    <string name="app_name">Onsite Fault Tracker</string>

    <string name="action_settings">Settings</string>

    <!-- Home Screen -->
    <string name="home_title">Onsite Fault Tracker</string>
    <string name="new_record">New Record</string>
    <string name="continue_record">Continue Record</string>
    <string name="submit_record">Submit Record</string>
    <string name="zip_record">Zip Record</string>
    <string name="previous_records">Previous Records</string>
    <string name="app_version">App Version: %s</string>
    <string name="no_current_record">No Current Record</string>
    <string name="not_connected">Usb connection not initialized</string>
    <string name="connected">Usb connected</string>
    <string name="BTconnected">Bluetooth connected</string>
    <string name="BTconnecting">Bluetooth connecting...</string>
    <string name="BTnotConnected">Bluetooth not connected</string>
    <string name="BTnotEnabled">Bluetooth not enabled</string>
    <string name="BTdiscovery_started">Bluetooth discovery started</string>
    <string name="BTdiscovery_finished">Bluetooth discovery finished</string>

    <string name="charger_not_connected_title">Warning</string>
    <string name="charger_not_connected_message">The charger is not connected, it is highly recommended you connect the charger before continuing</string>

    <string name="record_exists_title">Record Exists</string>
    <string name="record_exists_message">A record exists for today, would you like to create a new one?</string>
    <string name="record_exists_new_record">Create New</string>
    <string name="record_exists_resume_current">Resume current</string>
    <string name="new_record_dialog_title">New Record</string>
    <string name="new_record_dialog_message">This will create a new record for today, %s. Please enter a name for this record</string>
    <string name="new_record_name_hint">New Record Name</string>
    <string name="create_record_error_title">Error</string>
    <string name="create_record_error_message">Failed to create a record with the following error: %s</string>
    <string name="new_record_please_enter_name_title">Name required</string>
    <string name="new_record_please_enter_name_message">Please enter a name for the new record</string>
    <string name="open_settings_button">Open Settings</string>

    <!-- Settings Screen -->
    <string name="settings_title">Settings</string>
    <string name="settings_camera_id_title">Camera Id</string>
    <string name="settings_camera_ori_title">Camera Direction</string>
    <string name="settings_computer_id_title">Computer Name</string>
    <string name="settings_bluetooth_title">Enable bluetooth</string>
    <string name="set_camera_id_title">Set camera Id</string>
    <string name="set_camera_id_message">Enter the camera Id for this device</string>
    <string name="must_set_camera_id_title">Camera Id required</string>
    <string name="must_set_camera_id_message">A camera Id must be entered in order to create a record</string>
    <string name="set_camera_ori_title">Set camera direction</string>
    <string name="set_camera_ori_message">Enter the camera direction for this device</string>
    <string name="must_set_camera_ori_title">Camera direction required</string>
    <string name="must_set_camera_ori_message">A camera direction must be entered in order to create a record</string>
    <string name="set_computer_id_title">Set computer name</string>
    <string name="set_computer_id_message">Enter the computer name this device should connect to</string>
    <string name="must_set_computer_id_title">Computer name required required</string>
    <string name="must_set_computer_id_message">A computer name must be entered in order to create a record</string>
    <string name="must_set_bluetooth_title">Bluetooth enabled required</string>
    <string name="must_set_bluetooth_message">Must set whether bluetooth is enabled in order to create a record</string>
    <string name="set_bluetooth_title">Enable bluetooth</string>
    <string name="set_bluetooth_message">Enable YES or NO to enable or disable bluetooth</string>
    <string name="tap_camera_id">Tap to set camera Id</string>
    <string name="tap_camera_ori">Tap to set camera direction</string>
    <string name="tap_computer_id">Tap to set computer name</string>
    <string name="tap_bluetooth">Tap to set bluetooth</string>
    <string name="camera_id_hint">Camera Id</string>
    <string name="camera_ori_hint">Camera direction</string>
    <string name="computer_id_hint">Computer name</string>
    <string name="bluetooth_hint">Enable bluetooth yes/no</string>
    <string name="setting_frequency_title">Picture frequency</string>
    <string name="setting_frequency_value">%.1f seconds</string>
    <string name="setting_image_size_title">Image size</string>
    <string name="setting_image_size_value">%d KB</string>
    <string name="setting_recording_hours_title">Usual recording hours</string>
    <string name="setting_exposure_title">Exposure</string>
    <string name="setting_recording_hours_value">%.1f hours</string>
    <string name="settings_restore_defaults">Restore Defaults</string>
    <string name="restore_settings_dialog_title">Are you sure?</string>
    <string name="restore_settings_dialog_message">All settings will be reset to their default state</string>
    <string name="restore_settings_dialog_confirm">Confirm</string>
    <string name="restore_settings_dialog_cancel">Cancel</string>
    <string name="required_storage_text">Estimated required storage: %s</string>
    <string name="available_storage_text">Available external storage: %s</string>
    <string name="setting_exposure_value">Exposure %d%%</string>
    <string name="setting_focus_distance_title">Focus distance</string>
    <string name="setting_focus_distance_value">%.1f meters</string>
    <string name="setting_frame_duration_title">Frame duration</string>
    <string name="setting_frame_duration_value">%d%%</string>

    <string name="not_enough_storage_title">Warning</string>
    <string name="not_enough_storage_message">There is not enough available storage space to complete the selected days work.</string>
    <string name="cancel">Cancel</string>
    <string name="continue_anyway">Continue Anyway</string>

    <!-- Record Fragment Strings -->
    <string name="record_title">Record</string>

    <string name="record_low_disk_space_dialog_title">Warning!</string>
    <string name="record_low_disk_space_dialog_message">The disk space on this device is very low, it will not be able to record much longer</string>
    <string name="record_low_battery_dialog_title">Warning!</string>
    <string name="record_low_battery_dialog_message">The battery on this device is very low, it will not be able to record much longer.  Please plug in the USB charger cable</string>
    <string name="record_no_disk_space_title">Error</string>
    <string name="record_no_disk_space_message">There is not enough available space to continue recording.  Please clear up some space then continue recording.</string>
    <string name="record_error_title">Error</string>
    <string name="record_error_message">An error has prevented frame recording.  Click Continue on the home screen to start again.  If that doesnt work try turning off and on your device.  If still no luck please contact support.</string>

    <!-- Previous Records Strings -->
    <string name="record_progress_in_progress">IN PROGRESS</string>
    <string name="record_progress_ready_to_submit">READY TO SUBMIT</string>
    <string name="record_progress_finalized">FINALIZED</string>

    <string name="delete_previous_record_title">Are you sure?</string>
    <string name="delete_previous_record_not_finalized_message">Deleting a record cannot be undone and this record has not yet been finalized.  All work will be lost, are your sure you want to delete?</string>
    <string name="delete_previous_record_message">Are you sure you want to delete this record?</string>
    <string name="delete_previous_record_delete">Delete</string>
    <string name="delete_previous_record_cancel">Cancel</string>

    <!-- Submit Record Screen -->
    <string name="submit_created_date">Created on %s</string>
    <string name="submit_button">Submit Record</string>
    <string name="submit_total_size">Total record size %s</string>
    <string name="submit_remaining_size">REMAINING %s</string>
    <string name="submitting">Submitting</string>
    <string name="submit_complete">SUBMIT COMPLETE</string>
    <string name="zip_complete">ZIP COMPLETE</string>

    <string name="submitting_back_dialog_title">Exit ?</string>
    <string name="submitting_back_dialog_message">Exiting will pause uploading of this record</string>
    <string name="submitting_back_dialog_exit">Exit</string>
    <string name="submitting_back_dialog_cancel">Cancel</string>

    <string name="submit_record_more_record">Continue Recording</string>
    <string name="submit_record_more_submit">Submit Record</string>
    <string name="submit_record_more_delete">Delete Record</string>
    
    <string name="record_submit_failed_title">Error</string>
    <string name="record_submit_failed_message">An error occurred while submitting the record, please check your internet connection and try again.</string>

    <!-- number display value strings -->=
    <string name="kb_value">%d KB</string>
    <string name="mb_value">%.1f MB</string>
    <string name="gb_value">%.2f GB</string>

    <string name="millis_value">%d millis</string>
    <string name="seconds_value">%d seconds</string>
    <string name="minutes_value">%d minutes</string>
    <string name="hours_value">%df hours</string>

    <!-- Content Descriptions -->
    <string name="content_desc_settings">Settings</string>
    <string name="content_desc_back">Back</string>

</resources>
