<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/record_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textStyle="bold"
        android:text="@string/record_title"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/text_dark"
        />

    <Button
        android:id="@+id/continue_recording_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_record_more_record"
        android:textSize="@dimen/button_text_size"
        android:textColor="@color/colorAccent"
        android:background="@color/transparent"
        />

    <Button
        android:id="@+id/submit_record_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_record_more_submit"
        android:textSize="@dimen/button_text_size"
        android:textColor="@color/colorAccent"
        android:background="@color/transparent"
        />

    <Button
        android:id="@+id/delete_record_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_record_more_delete"
        android:textSize="@dimen/button_text_size"
        android:textColor="@color/colorAccent"
        android:background="@color/transparent"
        />

</LinearLayout>