<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_horizontal_margin" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/new_record_button"
            android:layout_width="@dimen/home_button_width"
            android:layout_height="@dimen/home_button_height"
            android:layout_centerHorizontal="true"
            android:text="@string/new_record"
            android:textColor="@color/text_light"
            android:paddingLeft="@dimen/home_button_left_adjustment"
            android:layout_marginBottom="@dimen/home_text_vertical_margin"
            android:textSize="@dimen/button_text_size"
            android:background="@drawable/orange_button_selector"
            />

        <View
            android:id="@+id/divider_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/new_record_name_text_margin"
            android:layout_marginBottom="@dimen/new_record_name_text_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_below="@+id/new_record_button"
            android:background="@color/divider_color"/>

        <TextView
            android:id="@+id/current_record_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_current_record"
            android:layout_below="@+id/divider_view"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/current_record_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/current_record_name"
            android:text=""
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/home_text_small_vertical_margin"
            android:layout_marginBottom="@dimen/home_text_small_vertical_margin"/>

        <TextView
            android:id="@+id/connected_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/current_record_date"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/home_text_small_vertical_margin"
            android:layout_marginBottom="@dimen/home_text_small_vertical_margin"
            android:text="@string/BTnotConnected" />

        <Button
            android:id="@+id/continue_record_button"
            android:layout_width="@dimen/home_button_width"
            android:layout_height="@dimen/home_button_height"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/connected_text_view"
            android:text="@string/continue_record"
            android:textColor="@color/text_light"
            android:background="@drawable/yellow_button_selector"
            android:paddingLeft="@dimen/home_button_left_adjustment"
            android:layout_marginTop="@dimen/home_text_vertical_margin"
            android:textSize="@dimen/button_text_size"
            android:enabled="false"
            />

        <Button
            android:id="@+id/submit_record_button"
            android:layout_width="@dimen/home_button_width"
            android:layout_height="@dimen/home_button_height"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/continue_record_button"
            android:text="@string/submit_record"
            android:textColor="@color/text_light"
            android:layout_marginTop="@dimen/home_button_vertical_space"
            android:background="@drawable/orange_button_selector"
            android:paddingLeft="@dimen/home_button_left_adjustment"
            android:textSize="@dimen/button_text_size"
            android:enabled="false"
            />

        <Button
            android:id="@+id/previous_records_button"
            android:layout_width="@dimen/home_button_width"
            android:layout_height="@dimen/home_button_height"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/submit_record_button"
            android:text="@string/previous_records"
            android:textColor="@color/text_light"
            android:layout_marginTop="@dimen/home_button_vertical_space"
            android:background="@drawable/orange_button_selector"
            android:paddingLeft="@dimen/home_button_left_adjustment"
            android:textSize="@dimen/button_text_size"
            android:enabled="false"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/app_version_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textColor="@color/text_dark"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        />

</RelativeLayout>